gcc/testsuite/g++.dg/parse/error24.C
// PR c++/19395

struct A {
  typedef int ::X; // { dg-error "" }
};


